2008-01-08  ARAKI Yasuhiro  <ar@debian.org>

	* app/views/atom/feed.rxml: Fix to link HTML URL.(fix issue #67)

2008-01-04  ARAKI Yasuhiro  <ar@debian.org>

	* doc/InstallByFulldist.wiki: Copy from ../INSTALL.

2007-12-25  ARAKI Yasuhiro  <ar@debian.org>

	* test/unit/author_test.rb (AuthorTest::test_authenticate): New test method.

2007-12-23  ARAKI Yasuhiro  <ar@debian.org>

	* lib/workers/pingger_worker.rb (PinggerWorker::create): Fix to use defer_seconds

	* app/models/author.rb (Author::self.authenticate): Fix error. Back to revision 305.		
	- I know it causes "DEPRECATION WARNING: find_first is deprecated and will be removed from Rails 2.0".

2007-12-22  ARAKI Yasuhiro  <ar@debian.org>

	* lib/workers/pingger_worker.rb (PinggerWorker::async_send): fix.

	* doc/HowToRakeTest.wiki: New file.

	* app/controllers/admin/article_controller.rb (Admin::add_article): Cleanup.

	* test/functional/admin/article_controller_test.rb (Admin::test_add_article): Fix.

	* app/views/shared/default/comment-enrollment.rhtml: add <br clear="all">
	* app/views/shared/default/comment2.rhtml: add <br clear="all">

2007-12-21  ARAKI Yasuhiro  <araki@araki.us>

	* doc/Ping.wiki: add example ping receiver URL.

	* app/controllers/admin/article_controller.rb (Admin::add_article): When no author is defined, and redirect to manag_aurhor.
	* app/views/layouts/login.rhtml: likewise.
	* app/controllers/admin/system_controller.rb (Admin::manage_author): Fix to show flash['notice'].

	* app/views/admin/shared/edit_don_env.rhtml: Add information to help initial-setup.

	* app/views/help/first_setup.rhtml: Add information.

2007-12-20  ARAKI Yasuhiro  <araki@araki.us>
	
	* doc/PinggerIntroduction.wiki: updated for BackgrounDRb Pinnger.
	* INSTALL: add initial password setting in config/environment.rb
	* config/environment.example.rb: add example of 'config/environment.rb'.

2007-12-19  ARAKI Yasuhiro  <ar@debian.org>
